<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>devfun.bookstore</groupId>
  <artifactId>restapp</artifactId>
  <packaging>war</packaging>
  <version>1.0-SNAPSHOT</version>
  <name>restapp Maven Webapp</name>
  <url>http://maven.apache.org</url>
  
  <properties>
	<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
	
	<!--Test-->
		<!--jUnit은 어노테이션 기반으로 테스트하기 위해 4.x버전으로 한다. -->
	<version.junit>4.11</version.junit>
	
	<!--Logging-->
	<version.slf4j>1.7.5</version.slf4j>
	<version.logback>1.0.13</version.logback>
	
	<!--Spring-->
	<version.spring>3.2.5.RELEASE</version.spring>
	
	<!--Servlet-->
	<version.servlet>2.5</version.servlet>	
  </properties>
  
  <dependencies>
    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <version>${version.junit}</version>
      <scope>test</scope>
    </dependency>
	<dependency>
	<!--spring test는 스프링을 테스트하게 해주는 라이브러리이다. 
		테스트때만 사용하므로 의존범위를 test로 설정한다.-->
		<groupId>org.springframework</groupId>
		<artifactId>spring-test</artifactId>
		<version>${version.spring}</version>
		<scope>test</scope>
		<exclusions>
			<!--exclusion은 의존성을 제외하겠다는 뜻이다. 
			스프링은 기본적으로 JCL을 사용하는데, 이 프로젝트에서는 SLF4J를 사용하므로 
			스프링에서 참조하는 JCL은 필요없다. 
			따라서 spring-test에서 사용하는 commons-logging 라이브러리를 제외하기 위해 
			이 안에 선언한다. 그리고, 이 바로 아래에서 slf4j와 logback을 추가하고,
			스프링에서 로그 출력을 하기위해 JCL-over-slf4j를 추가한다. -->
			<exclusion>
				<artifactId>commons-logging</artifactId>
				<groupId>commons-logging</groupId>
			</exclusion>
		</exclusions>
	</dependency>
	
	<!--Logging with SLF4J&LogBack -->
	<!--slf4j와 logback을 추가하고,
			스프링에서 로그 출력을 하기위해 JCL-over-slf4j를 추가한다. -->
	<dependency>
		<groupId>org.slf4j</groupId>
		<artifactId>slf4j-api</artifactId>
		<version>${version.slf4j}</version>
	</dependency>
	<dependency>
		<groupId>org.slf4j</groupId>
		<artifactId>jcl-over-slf4j</artifactId>
		<version>${version.slf4j}</version>
	</dependency>
	<dependency>
		<groupId>ch.qos.logback</groupId>
		<artifactId>logback-classic</artifactId>
		<version>${version.logback}</version>
	</dependency>
	
	<!--spring mvc를 추가한다. 
	slf4j를 사용하기 위해 exclusion을 사용하여
	JCL라이브러리 참조를 제거한다-->
	<!--spring web mvc라이브라러리만 추가해도 spring-core, spring-beans,
	spring-aop, spring-context 등 관련 라이브러리가 자동으로 추가된다. -->
	<dependency>
		<groupId>org.springframework</groupId>
		<artifactId>spring-webmvc</artifactId>
		<version>${version.spring}</version>
		<exclusions>
			<exclusion>
				<artifactId>commons-logging</artifactId>
				<groupId>commons-logging</groupId>
			</exclusion>
		</exclusions>
	</dependency>
	
	<!--SERVLET -->
	<!--프로젝트가 웹 애플리케이션이므로 servlet api도 추가한다. 
	실제 실행할 때는 서블릿 컨테이너가 servlet api를 제공하지만, 
	컴파일할 때 라이브러리가 필요하기 때문에 미리 적어놓아야만 한다. 
	의존범위는 provided로 설정한다. -->
	<dependency>
		<groupId>javax.servlet</groupId>
		<artifactId>servlet-api</artifactId>
		<version>${version.servlet}</version>
		<scope>provided</scope>
	</dependency>
  </dependencies>
  
  <build>
    <finalName>restapp</finalName>
	
	<plugins>
		<plugin>
			<groupId>org.apache.maven.plugins</groupId>
			<artifactId>maven-compiler-plugin</artifactId>
			<version>3.1</version>
			<configuration>
				<source>1.6</source>
				<target>1.6</target>
				<encoding>UTF-8</encoding>
			</configuration>
		</plugin>
		
		<plugin>
			<groupId>org.apache.maven.plugins</groupId>
			<artifactId>maven-resources-plugin</artifactId>
			<version>2.6</version>
			<configuration>
				<encoding>UTF-8</encoding>
			</configuration>
		</plugin>
		
		<plugin>
			<groupId>org.apache.maven.plugins</groupId>
			<artifactId>maven-surefire-plugin</artifactId>
			<version>2.16</version>
			<configuration>
				<argLine>-Xms256m -Xmx512m -XX:MaxPermSize=128m -Dfile.encoding=UTF-8</argLine>
			</configuration>
		</plugin>
	</plugins>
  </build>
</project>